# SemProject

./: .gitignore
RT1020_FLS/: CMakeLists.txt  flash_mcu.sh
RT1020_FLS/docs/: FLEXSPI_NOTES.md  NOR_STATUS_REGISTER.md  TROUBLESHOOTING_FLEXSPI_IP.md
RT1020_FLS/include/: flexspi_ip.h
RT1020_FLS/linker/: fls.ld
RT1020_FLS/shared/include/: bignum.h  flexspi_nor_config.h  metadata.h  mpu.h  rt1020_regs.h  semc.h
RT1020_FLS/shared/src/: bignum.c  crc32.c  mpu.c  startup_MIMXRT1020.c  verify.c
RT1020_FLS/src/: boot_header.c  flexspi_ip.c  main.c
RT1020_PERIPHERAL/: CMakeLists.txt  README.md  arm-none-eabi-toolchain.cmake  build.sh  flash_mcu.sh
RT1020_PERIPHERAL/docs/: ADC_NOTES.md  CAN_NOTES.md  CONFIG_NOTES.md  DET_NOTES.md  GLOSSARY.md  GPT_NOTES.md  ICU_LOOP_NOTES.md  ICU_NOTES.md  LPSPI_NOTES.md  PWM_NOTES.md  TROUBLESHOOTING_ICACHE_WATCHDOG.md  WDGM_NOTES.md  WDG_NOTES.md
RT1020_PERIPHERAL/include/: Adc.h  Can.h  Cfg.h  Det.h  Dio.h  Gpt.h  Icu.h  Mcu.h  Port.h  Pwm.h  Spi.h  Std_Types.h  Wdg.h  WdgM.h  lpspi.h
RT1020_PERIPHERAL/src/: Adc.c  Can.c  Cfg.c  Det.c  Dio.c  Gpt.c  Icu.c  Mcu.c  Port.c  Pwm.c  Spi.c  Wdg.c  WdgM.c  lpspi.c  main.c
SDRAM/: CMakeLists.txt  README.md  flash_mcu.sh
SDRAM/docs/: SDRAM_GLOSSARY.md
SDRAM/include/: rt1020_regs.h  uart.h
SDRAM/linker/: MIMXRT1020_flexspi.ld
SDRAM/src/: boot_header.c  clock.c  flexspi_nor_config.c  led.c  main.c  main_LED.c  main_clock_init.c  semc.c  system_MIMXRT1020.c  uart.c
SDRAM_BOOT/: CMakeLists.txt  flash_mcu.sh
SDRAM_CACHE/: CMakeLists.txt  execute_gdbserver.sh  flash_mcu.sh  openocd.cfg  setup_mcu.sh
SDRAM_CACHE/docs/: CACHE_BENCHMARK.md  GPIO_REGISTERS.md
SDRAM_CACHE/include/: cache.h  rt1020_regs.h
SDRAM_CACHE/src/: cache.c  main.c  mpu.c
SDRAM_CACHE/startup/: startup_MIMXRT1020.c
SDRAM_DMA/: CMakeLists.txt  Makefile  flash_mcu.sh
SDRAM_OTA/: CMakeLists.txt  flash_mcu.sh
SDRAM_OTA/app/: CMakeLists.txt
SDRAM_OTA/app/linker/: app_slota.ld
SDRAM_OTA/app/src/: fault.c  main.c
SDRAM_OTA/bootloader/linker/: bootloader.ld
SDRAM_OTA/bootloader/src/: main.c
SDRAM_OTA/docs/: FINAL_TROUBLESHOOTING  SETUP.md  TARGET_RELOCATION.md  TROUBLESHOOTING_20260328.md
SDRAM_OTA/shared/src/: cache.c  dma.c  mpu.c  semc.c  startup_MIMXRT1020.c  uart.c
SDRAM_OTA_AB/: CMakeLists.txt  build.sh  flash_mcu.sh
SDRAM_OTA_AB/app_slot_a/: CMakeLists.txt
SDRAM_OTA_AB/app_slot_a/include/: bootctrl_runtime.h
SDRAM_OTA_AB/app_slot_a/linker/: app_slot_a.ld
SDRAM_OTA_AB/app_slot_a/src/: bootctrl_rom_api.c  bootctrl_runtime.c  bootctrl_runtime_flash.c  bootctrl_runtime_flash_lowlevel.c  bootctrl_runtime_write.c  main.c
SDRAM_OTA_AB/app_slot_b/: CMakeLists.txt
SDRAM_OTA_AB/app_slot_b/include/: bootctrl_runtime_b.h
SDRAM_OTA_AB/app_slot_b/linker/: app_slot_b.ld
SDRAM_OTA_AB/app_slot_b/src/: bootctrl_rom_api.c  bootctrl_runtime_b.c  bootctrl_runtime_flash_lowlevel.c  bootctrl_runtime_write_b.c  main.c
SDRAM_OTA_AB/bootctrl/: CMakeLists.txt
SDRAM_OTA_AB/bootctrl/linker/: boot_ctrl.ld
SDRAM_OTA_AB/bootctrl/src/: boot_ctrl_default.c
SDRAM_OTA_AB/bootloader/: CMakeLists.txt
SDRAM_OTA_AB/bootloader/linker/: bootloader.ld
SDRAM_OTA_AB/bootloader/recovery/: CMakeLists.txt
SDRAM_OTA_AB/bootloader/recovery/include/: recovery_protocol.h
SDRAM_OTA_AB/bootloader/recovery/linker/: recovery.ld
SDRAM_OTA_AB/bootloader/recovery/src/: main.c  recovery_protocol.c
SDRAM_OTA_AB/bootloader/src/: bootctrl_rom_api.c  bootctrl_runtime_boot.c  bootctrl_runtime_write_boot.c  main.c
SDRAM_OTA_AB/bootloader/stage1/: CMakeLists.txt
SDRAM_OTA_AB/bootloader/stage1/src/: boot_header.c  main.c
SDRAM_OTA_AB/bootloader/stage2/: CMakeLists.txt
SDRAM_OTA_AB/bootloader/stage2/include/: boot_policy.h  bootctrl_runtime_boot.h
SDRAM_OTA_AB/bootloader/stage2/src/: boot_policy.c  main.c
SDRAM_OTA_AB/bootloader_stage1/: CMakeLists.txt
SDRAM_OTA_AB/bootloader_stage1/linker/: stage1.ld
SDRAM_OTA_AB/bootloader_stage1/src/: main.c
SDRAM_OTA_AB/docs/: AB_BOOTLOADER_INIT.md  Cache_Optimization.md  MEMORY_MAP.md  PATH_B3_20260502_PHASE4_PASSIVE_RECOVERY.md  PATH_B_20260426_MISSION3_BOOTLOADER_ATTEMPTS.md  PROTOCOL_RECOVERY_UART.md  Phase1_5_DMA_Dynamic_Coherency.md  README.md  SDRAM_OTA_AB_SLOTA_ONLY.md  TROUBLESHOOTING_20260425_BOOTCTRL_FLASHWRITE.md
SDRAM_OTA_AB/shared/include/: cache.h  dma.h  rt1020_regs.h  uart.h
SDRAM_OTA_AB/shared/src/: bootctrl_rom_api.c  flexspi_nor_config.c  startup_MIMXRT1020.c  system_MIMXRT1020.c  uart.c
SDRAM_OTA_AB/tools/: post_build_stage2.py  uart_uploader.py
SDRAM_SECURE_BOOT/: CMakeLists.txt  README.md  build.sh  flash_mcu.sh
SDRAM_SECURE_BOOT/app/: CMakeLists.txt
SDRAM_SECURE_BOOT/app/app_a/: CMakeLists.txt
SDRAM_SECURE_BOOT/app/app_a/linker/: app_a.ld
SDRAM_SECURE_BOOT/app/app_a/src/: main.c
SDRAM_SECURE_BOOT/app/app_b/: CMakeLists.txt
SDRAM_SECURE_BOOT/app/app_b/linker/: app_b.ld
SDRAM_SECURE_BOOT/app/app_b/src/: main.c
SDRAM_SECURE_BOOT/bootloader/: CMakeLists.txt
SDRAM_SECURE_BOOT/bootloader/stage1/: CMakeLists.txt
SDRAM_SECURE_BOOT/bootloader/stage1/linker/: stage1.ld
SDRAM_SECURE_BOOT/bootloader/stage1/src/: boot_header.c  main.c
SDRAM_SECURE_BOOT/bootloader/stage2/: CMakeLists.txt
SDRAM_SECURE_BOOT/bootloader/stage2/linker/: stage2.ld
SDRAM_SECURE_BOOT/bootloader/stage2/src/: main.c
SDRAM_SECURE_BOOT/docs/: ARCHITECTURE.md  BUILD_AND_TESTING.md  CRYPTO_IMPLEMENTATION.md  TRUST_CHAIN.md
SDRAM_SECURE_BOOT/shared/include/: bignum.h  crc32.h  metadata.h  rsa.h  sha256.h  verify.h
SDRAM_SECURE_BOOT/shared/src/: bignum.c  led.c  metadata.c  rsa.c  string_min.c  system_MIMXRT1020.c  verify.c
SDRAM_SECURE_BOOT/tests/: CMakeLists.txt  build.sh  test.sh
SDRAM_SECURE_BOOT/tests/src/: test_bignum.c  test_rsa.c  test_sha256.c
SDRAM_SECURE_BOOT/tests/vectors/: bn_mod_vectors.h  bn_modexp_vectors.h  gen_by_mod_vectors.py  gen_by_modexp_vectors.py  gen_rsa_test_vectors.py  rsa_test_vectors.h
SDRAM_SECURE_BOOT/tools/: patch_stage2_header.py  set_metadata.py  set_min_version.py
UART/: CMakeLists.txt  flash_mcu.sh
(+41 files in other folders)
